fixed some blog styling, used spacing to make it easier to read

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -22,11 +22,22 @@ body {
 p {
   line-height: 30px;
   font-size: 1.15rem;
+  padding: 0.5rem 0;
+}
+
+li {
+  line-height: 30px;
+  font-size: 1.15rem;
+  padding: 0.5rem 0;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  padding: 1rem 0;
 }
 
 h2 {
@@ -38,7 +49,7 @@ h2 {
 }
 
 h3 {
-  margin-top: 1rem;
+  margin: 1rem 0;
 }
 
 .header {
@@ -119,6 +130,11 @@ nav {
 
 figure img {
   max-width: 800px;
+  margin: 1.5rem 0;
+}
+
+h4 {
+  margin: 1rem 0;
 }
 
 .nav-menu {
@@ -140,14 +156,6 @@ nav ul {
   color: var(--color-primary);
   font-weight: 700;
   display: inline-block;
-}
-
-.about-me,
-.skills,
-.projects,
-.blogs-section,
-.contact {
-  padding: 15rem 0;
 }
 
 .section {
@@ -180,121 +188,9 @@ nav ul {
   align-content: center;
 }
 
-.about-me img {
-  border-radius: 50%;
-  width: 20rem;
-  /* padding: 1rem; */
-  border: 4px solid;
-  border-color: var(--color-primary);
-  cursor: pointer;
-}
-
-.skills-list {
-  padding-top: 2.5rem;
-  display: flex;
-  gap: 5%;
-  flex-wrap: wrap;
-}
-
-.skills-icon {
-  max-width: 75px;
-  margin: 1.5rem;
-  opacity: 0; /* Start invisible */
-  transform: translateX(100%); /* Start off-screen */
-  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-}
-
-.skills-icon.slide-in {
-  opacity: 1;
-  transform: translateX(0); /* Move to final position */
-}
-
 footer {
   text-align: center;
   padding: 1rem;
-}
-
-.project-grid {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5rem;
-  margin: 1.5rem;
-  z-index: 2000;
-}
-
-.project-box {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 5px;
-  /* border: 1px solid; */
-  /* border-color: #3e7256; */
-  box-shadow: 0px 0px 5px #bdc1c5;
-  background: white;
-  /* width: 380px; */
-}
-
-.project-modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 60%;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-  z-index: 1010;
-  overflow-y: auto;
-  /* backdrop-filter: blur(10px); */
-}
-
-.project-modal-content {
-  margin: 1rem;
-}
-
-.project-text-full p {
-  line-height: 1.5;
-  margin: 2rem;
-  font-weight: 400;
-}
-
-.project-img-preview {
-  width: 100%;
-  max-height: 195px;
-  object-fit: cover;
-  display: block;
-  border-radius: 5px;
-}
-
-.img-modal {
-  max-height: 300px;
-  width: 100%;
-  object-fit: cover;
-  display: block;
-  border-radius: 5px;
-}
-
-.project-box a {
-  text-decoration: underline;
-  text-decoration-color: var(--color-primary);
-  font-size: larger;
-}
-
-.project-box p {
-  font-size: large;
-  margin: 1rem;
-}
-
-.modal-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 200%;
-  height: 200%;
-  backdrop-filter: blur(4px);
-  z-index: 1000;
 }
 
 .global-overlay {
@@ -305,25 +201,6 @@ footer {
   height: 100%;
   backdrop-filter: blur(4px);
   z-index: 1000;
-}
-
-.project-text {
-  margin: 1rem;
-}
-
-.project-links {
-  display: flex;
-  justify-content: center;
-  gap: 3rem;
-}
-
-.project-skills {
-  width: auto;
-  margin: 1rem auto;
-  text-align: center;
-  list-style-type: none;
-  display: flex;
-  justify-content: space-evenly;
 }
 
 .blog-grid {
@@ -364,63 +241,6 @@ figure {
   color: #000000;
 } */
 
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-}
-
-.contact-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 2rem;
-  margin: 0 auto;
-}
-
-.contact-info {
-  margin: 1rem auto;
-}
-
-.contact-line {
-  margin-bottom: 2rem;
-}
-
-form label {
-  font-weight: 500;
-  margin: 0.5rem 0;
-}
-
-form input[type="text"],
-form textarea {
-  border: 2px solid;
-  border-color: var(--color-primary);
-  padding: 0.5rem;
-  font-family: inherit;
-  font-size: 1.2rem;
-  border-radius: 5px;
-  background-color: transparent;
-}
-
-.start-bouncing {
-  animation: bounce 1s ease-in 1;
-}
-
-@keyframes bounce {
-  20% {
-    transform: translateY(-2rem);
-  }
-
-  40% {
-    transform: none;
-  }
-}
-
-@keyframes slide-in {
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
 .hidden {
   display: none;
 }
@@ -433,12 +253,11 @@ form textarea {
   h2 {
     text-align: center;
   }
-  .about-me {
-    display: flex;
-    flex-direction: column-reverse;
-    gap: 3rem;
-    align-items: center;
+
+  figure img {
+    max-width: 80%;
   }
+
   .about-me p {
     font-size: 2rem;
     text-align: center;
@@ -449,32 +268,5 @@ form textarea {
 
   .skills-list {
     justify-content: center;
-  }
-
-  .about-me,
-  .skills,
-  .projects,
-  .blogs-section,
-  .contact {
-    padding: 5rem 0;
-  }
-
-  .project-grid {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-  }
-  .project-modal {
-    max-width: none;
-  }
-  .contact-container {
-    display: flex;
-    flex-direction: column;
-  }
-  .project-links {
-    align-items: center;
-  }
-  .img-modal {
-    width: auto;
   }
 }
